--- a/css/my_set.css
+++ b/css/my_set.css
@@ -10,6 +10,11 @@ body {
     /*font-size: 14px;*/
 }
 
+p {
+  font-family: jf-jinxuan;
+  font-weight: 500;
+}
+
 
 /*------------------------------------------------   Navbar Setting Start   ------------------------------------------------*/
 
