--- a/css/my_set.css
+++ b/css/my_set.css
@@ -208,7 +208,9 @@ header p{
 }
 
 #about p{
-  font-family: inherit;
+  /*font-family: inherit;*/
+  font-family: jf-jinxuan;
+  font-weight: 400;
 }
 
 .col-avatar-info {
@@ -491,7 +493,9 @@ header p{
 
 #DoH p{
   color: #ffffff;
-  font-family: inherit;;
+  /* font-family: inherit; */
+  font-family: jf-jinxuan;
+  font-weight: 400;
   font-size: 1.5em;
   padding: 20px 80px 0 80px;
 }
